force-app/main/default/objects/Transaction__c/fields/tip__c.field-meta.xml
<CustomField>
    <fullName>Tip__c</fullName>
    <defaultValue>false</defaultValue>
    <description>did the customer tip?</description>
    <label>Tip</label>
    <type>Checkbox</type>
</CustomField>