force-app/main/default/objects/Transaction__c/fields/tip_amount__c.field-meta.xml
<CustomField>
    <fullName>Tip_Amount__c</fullName>
    <label>Tip Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>