force-app/main/default/objects/Transaction__c/validationRules/hasTip.validationRule-meta.xml
<ValidationRule>
    <fullName>hasTip</fullName>
    <active>true</active>
    <description>requires tip amount and tip type if tip checkbox is selected</description>
    <errorConditionFormula>IF(AND(Tip__c , OR( NOT(OR( ISPICKVAL( Tip_Type__c , &quot;Cash&quot;) ,  ISPICKVAL( Tip_Type__c , &quot;Credit&quot;) )) , ISBLANK( Tip_Amount__c ))), true, false)</errorConditionFormula>
    <errorDisplayField>Tip__c</errorDisplayField>
    <errorMessage>Please enter a Tip type and Tip amount!</errorMessage>
</ValidationRule>