force-app/main/default/objects/Transaction__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Employee__c</columns>
    <columns>Sale_Price__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>